--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@storybook/addon-storyshots": "^4.1.11",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-redux": "^6.0.0",
+    "react-scripts": "2.1.3",
+    "react-test-renderer": "^16.7.0",
+    "require-context.macro": "^1.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
