--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@storybook/addon-knobs": "^4.1.11",
     "@storybook/addon-storyshots": "^4.1.11",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
